--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,53 +1,3 @@
-<div class="container mt-2 pt-2">
-  <a class="btn btn-primary m-2" href="#" role="button">Home</a>
-  <button class="btn btn-primary m-2" type="submit">Villes</button>
-   <button class="btn btn-primary m-2" type="submit">Pays</button>
-    <button class="btn btn-primary m-2" type="submit">Contactez-nous</button>
-</div>
-<nav class="navbar navbar-expand-lg bg-body-tertiary" >
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Home</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Villes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pays</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#">Contactez-nous</a>
-        </li>      
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-<div id="carouselExample" class="carousel slide">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="assets/ciel.jpg" class="d-block w-100" alt="ciel">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/casa.jpg" class="d-block w-100" alt="casa">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/rabat.jpg" class="d-block w-100" alt="rabat">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+<app-titre></app-titre>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
